apps/producer/infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-deployment
  labels:
    app: producer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels: 
        app: producer
    spec:
      containers:
        - name: producer 
          image: ghcr.io/jelgar/auto-q8s/producer:main
          ports:
            - containerPort: 1000
