apps/producer/infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
spec:
  selector:
    app: producer 
  ports:
  - port: 80
    protocol: TCP
    targetPort: 10000
