apps/producer/infra/virtual_service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: producer-vs
  namespace: default 
spec:
  hosts:
  - producer.$CLUSTER_BASE_URL
  gateways:
  - producer-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host:  producer-service
        port:
          number:
            1000
